[Notifications] Let plasmashell be the only true owner of notification and job tracker services

Register notification and job tracker services with "allow replacement" flag if not plasmashell,
so when it eventually comes up, it can claim the service and then cling on to it.

BUG: 408250
FIXED-IN: 5.16.2

Differential Revision: https://phabricator.kde.org/D22017